Architectural cleanup